# flor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
crates/base/: Cargo.toml
crates/base/src/: graphics.rs  lib.rs  platform.rs  types.rs
crates/base/src/graphics/: color.rs  draw_options.rs  error.rs  gradient.rs  handle.rs  path.rs  render.rs  scale_mode.rs  shadow.rs  text.rs  text_layout.rs
crates/base/src/graphics/text/: handle.rs  layout.rs
crates/base/src/platform/: clipboard.rs  cursor.rs  drag_drop.rs  events.rs  handle_result.rs  key_code.rs  key_state.rs  monitor.rs  mouse_position.rs  tray.rs  window_operations.rs  window_state.rs
crates/base/src/platform/drag_drop/: drag_format.rs  drop_effect.rs
crates/base/src/platform/tray/: event.rs  id.rs  manager.rs  options.rs
crates/base/src/types/: color.rs  rect.rs  transform2d.rs
crates/flor/: Cargo.toml  README.md
crates/flor/src/: device_kind.rs  error.rs  lib.rs  log_error.rs  min_wait_time.rs  proc.rs  render.rs  render_loader.rs  signal.rs  view.rs  windows.rs
crates/flor/src/proc/: mod.rs
crates/flor/src/render/: backend_error.rs  brush_handle.rs  error.rs  flor_render.rs  image_handle.rs  load_resource.rs  mod.rs  renderer.rs  surface_id.rs  svg_handle.rs  text_format_handle.rs  text_layout.rs
crates/flor/src/signal/: batch.rs  constant.rs  create.rs  effect.rs  id.rs  into_read.rs  list.rs  read.rs  read_signal.rs  runtime.rs  rw_signal.rs  value.rs  write.rs  write_signal.rs
crates/flor/src/signal/effect/: effect.rs  signal_effect.rs  updater_effect.rs
crates/flor/src/signal/list/: l_read.rs  l_read_signal.rs  l_rw_signal.rs  l_write.rs  l_write_signal.rs
crates/flor/src/signal/value/: v_read.rs  v_read_signal.rs  v_rw_signal.rs  v_signal_ref.rs  v_write.rs  v_write_signal.rs
crates/flor/src/view/: builder.rs  button.rs  class.rs  control_state.rs  draw_state.rs  focus_manager.rs  frame_policy.rs  handler.rs  into_iter.rs  into_view.rs  label.rs  mod.rs  resolver.rs  scroll_state.rs  state_selector.rs  v_stack.rs  view.rs  view_builder.rs  view_event.rs  view_id.rs  view_state.rs  view_storage.rs  visual_overflow.rs
crates/flor/src/view/builder/: builder.rs  class_builder.rs  disable_builder.rs  event_builder.rs  focus_index_builder.rs  layout_builder.rs  prop.rs  style_builder.rs  transform_builder.rs  z_index_builder.rs
crates/flor/src/view/handler/: drag_drop_handler.rs  key_handler.rs  mouse_handler.rs  theme_change_handler.rs  view_handler.rs  window_handler.rs
crates/flor/src/view/resolver/: decoration.rs  layout.rs  shared.rs  unit.rs
crates/flor/src/view/state_selector/: decoration.rs  dpi.rs  layout.rs
crates/flor/src/view/style/: layout.rs  mod.rs  style_selector.rs
crates/flor/src/view/view_builder/: builder.rs  class_builder.rs  event_builder.rs  focus_index_builder.rs  layout_builder.rs  mod.rs  prop.rs  style_builder.rs  transform_builder.rs  z_index_builder.rs
crates/flor/src/windows/: bus.rs  bus_dispatch_entry.rs  entry.rs  mod.rs  window_creation_queue.rs  window_options.rs  window_view.rs
crates/flor/src/windows/bus_dispatch_entry/: button_down_entry.rs  button_up_entry.rs  create_entry.rs  double_click_entry.rs  draw_entry.rs  frame_entry.rs  hit_test_entry.rs  ime_end_entry.rs  ime_input_entry.rs  ime_start_entry.rs  init_focus_manager_entry.rs  key_down_entry.rs  key_up_entry.rs  middle_button_double_click_entry.rs  middle_button_down_entry.rs  middle_button_up_entry.rs  mouse_leave_entry.rs  mouse_move_entry.rs  refresh_layout_entry.rs  right_button_double_click_entry.rs  right_button_down_entry.rs  right_button_up_entry.rs  tooltip_check_entry.rs  visual_test_entry.rs  wheel_scroll_lines_changed_entry.rs
crates/graphics/base/: Cargo.toml
crates/graphics/base/src/: color.rs  draw_options.rs  error.rs  gradient.rs  handle.rs  lib.rs  path.rs  render.rs  shadow.rs  text.rs  transform2d.rs
crates/graphics/direct2d/: Cargo.toml  README.md
crates/graphics/direct2d/src/: brush.rs  color.rs  encode.rs  error.rs  handle.rs  into_d2d_transform.rs  lib.rs  memory_font.rs  render_factory.rs  renderer.rs  text_layout.rs  to_d2d.rs
crates/graphics/direct2d/src/handle/: brush.rs  image.rs  mod.rs  surface.rs  svg.rs  text_format.rs
crates/graphics/direct2d/src/memory_font/: memory_font_file_loader.rs  memory_font_file_stream.rs
crates/graphics/direct2d/src/renderer/: clip_type.rs  config.rs
crates/graphics/direct2d/src/util/: color.rs  mod.rs
crates/graphics/opengl/: Cargo.toml  README.md
crates/graphics/opengl/src/: display_context.rs  error.rs  handle.rs  lib.rs  platform.rs  renderer.rs  shader.rs
crates/graphics/opengl/src/display_context/: platform.rs
crates/graphics/opengl/src/handle/: brush.rs  image.rs  surface.rs  svg.rs  text_format.rs
crates/graphics/opengl/src/platform/: window.rs
crates/graphics/opengl/src/renderer/: config.rs  context.rs
crates/graphics/opengl/src/shader/: builtin.rs  tessellator.rs
crates/graphics/tiny-skia/: Cargo.toml
crates/graphics/tiny-skia/src/: display_context.rs  error.rs  fast_box_blur.rs  handle.rs  has_transform.rs  lib.rs  renderer.rs  to_tiny_skia.rs
crates/graphics/tiny-skia/src/display_context/: platform.rs
crates/graphics/tiny-skia/src/handle/: brush.rs  image.rs  surface.rs  svg.rs  text_format.rs
crates/graphics/tiny-skia/src/renderer/: config.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs  shared.rs
crates/platform/base/: Cargo.toml
crates/platform/base/src/: cursor_type.rs  drop_effect.rs  events.rs  handle_result.rs  key_code.rs  lib.rs  monitor.rs  mouse_position.rs  window_operations.rs  window_state.rs
crates/platform/base/src/cursor/: cursor.rs  icon.rs  mod.rs
crates/platform/base/src/drag_drop/: drag_format.rs  drop_effect.rs
crates/platform/base/src/tray/: icon.rs  options.rs
crates/platform/windows/: Cargo.toml  README.md
crates/platform/windows/src/: clipboard.rs  conversions.rs  cursor.rs  drop_target.rs  lib.rs  monitor.rs  proc_handler.rs  tray.rs  win7_compat.rs  window.rs  window_id.rs  window_proc.rs
(+34 files in other folders)
