[workspace]
resolver = "2"
members = [
    "crates/flor",
    "crates/macros",
    "crates/graphics/opengl",
    "crates/graphics/direct2d",
    "crates/platform/base",
    "crates/platform/windows",
    "crates/graphics/base",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
homepage = ""
keywords = []
categories = []
license = ""
repository = ""

[workspace.dependencies]
flor-macros = { version = "0.1.0", path = "crates/macros" }
flor = { version = "0.1.0", path = "crates/flor" }
flor-platform-base = { version = "0.1.0", path = "crates/platform/base" }
flor-platform-windows = { version = "0.1.0", path = "crates/platform/windows" }
flor-graphics-base = { version = "0.1.0", path = "./crates/graphics/base" }
flor-graphics-opengl = { version = "0.1.0", path = "./crates/graphics/opengl" }
flor-graphics-direct2d = { version = "0.1.0", path = "./crates/graphics/direct2d" }
dashmap = "*"
#glutin = { version = "0.31.3" }
#glutin-winit = "0.4.2"
image = "0.25"
log = "0.4"
once_cell = "1"
quote = "1"
rand = { version = "0.9", features = [] }
rustc-hash = { version = "2" }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
syn = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
windows = "0.61.3"
windows-core = "0.61"
windows-numerics = "0.2.0"
taffy = { version = "0.7.7", default-features = false, features = ["std", "taffy_tree", "content_size", "detailed_layout_info"] }
parking_lot = "0.12.4"
lru = "0.16.2"
tiny-skia = "0.11.4"

[workspace.lints.rust]
#missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
