[workspace]
resolver = "2"
members = [
    "crates/flor",
    "crates/macros",
    "crates/graphics/tiny-skia",
    "crates/graphics/opengl",
    "crates/graphics/direct2d",
    "crates/platform/windows",
    "crates/base",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
homepage = ""
keywords = []
categories = []
license = ""
repository = ""

[workspace.dependencies]
arc-swap = "1.8.0"
atomic_float = "1.1.0"
flor = { version = "0.1.0", path = "crates/flor" }
flor-base = { version = "0.1.0", path = "crates/base" }
flor-graphics-opengl = { version = "0.1.0", path = "./crates/graphics/opengl" }
flor-graphics-direct2d = { version = "0.1.0", path = "./crates/graphics/direct2d" }
flor-graphics-tiny-skia = { version = "0.1.0", path = "./crates/graphics/tiny-skia" }
flor-macros = { version = "0.1.0", path = "crates/macros" }
dashmap = "*"
image = "0.25"
log = "0.4"
once_cell = "1"
quote = "1"
rand = { version = "0.10", features = [] }
rustc-hash = { version = "2" }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
syn = "2"
proc-macro2 = "1"
proc-macro-crate = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
windows = "0.62"
windows-core = "0.62"
windows-numerics = "0.3"
taffy = { version = "0.7.7", default-features = false, features = ["std", "taffy_tree", "content_size", "detailed_layout_info"] }
parking_lot = "0.12"
lru = "0.16"
tiny-skia = "0.12"
arboard = "3.6"
slotmap = "1"

[workspace.lints.rust]
#missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
