[package]
name = "flor-base"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[features]
platform = ["rustc-hash", "once_cell", "log"]
graphics = ["parking_lot"]

# graphics's features
svg = ["graphics"]
memory-font = ["graphics"]

# platform's features
theme-change = ["platform"]
monitor = ["platform"]
drag-drop = ["platform"]
tray = ["platform"]

[dependencies]
rustc-hash = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
log = { workspace = true, optional = true }

thiserror = { workspace = true }
parking_lot = { workspace = true, optional = true }

[lints]
workspace = true
