[package]
name = "flor-base"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[features]
text-layout = ["dep:cosmic-text"]
platform = ["rustc-hash", "once_cell", "log"]
graphics = ["parking_lot"]

# graphics's features
svg = ["graphics"]
memory-font = ["graphics"]

# platform's features
theme-change = ["platform"]
monitor = ["platform"]
drag-drop = ["platform"]
tray = ["platform"]
clipboard = ["platform"]

# Feature check
tiny-skia = ["cpu-render-backend"]
direct2d = ["gpu-render-backend"]
opengl = ["gpu-render-backend"]
cpu-render-backend = []
gpu-render-backend = []
no-check-backend = []

[dependencies]
cosmic-text = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
log = { workspace = true, optional = true }

thiserror = { workspace = true }
parking_lot = { workspace = true, optional = true }

[lints]
workspace = true
