[package]
name = "flor"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
TODO
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tiny-skia = ["dep:flor-graphics-tiny-skia", "cpu-render-backend"]
glow = []
direct2d = ["dep:flor-graphics-direct2d", "gpu-render-backend"]
opengl = ["dep:flor-graphics-opengl", "gpu-render-backend"]
cpu-render-backend = []
gpu-render-backend = []
signal-tracing = []
layout-flex = ["taffy/flexbox"]
layout-grid = ["taffy/grid"]
layout-block = ["taffy/block_layout"]

# 顶层 SVG 虚拟特性（用户只需要启用这个）
svg = ["flor-base/svg", "flor-graphics-direct2d?/svg", "flor-graphics-opengl?/svg", "flor-graphics-tiny-skia?/svg"]

theme-change = ["flor-platform/theme-change"]

clipboard = ["flor-platform/clipboard"]

drag-drop = ["flor-platform/drag-drop"]
tray = ["flor-platform/tray"]

memory-font = ["flor-graphics-direct2d?/memory-font", "flor-graphics-opengl?/memory-font", "flor-graphics-tiny-skia?/memory-font"]
monitor = ["flor-platform/monitor"]
hi-dpi = ["flor-platform/hi-dpi"]

cross-thread-window-creation = ["flor-platform/cross-thread-window-creation"]

[dependencies]
arc-swap = { workspace = true }
atomic_float = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
flor-base = { workspace = true, features = ["graphics"] }
flor-macros = { workspace = true }
#graphics-opengl = { workspace = true, optional = true }
flor-graphics-direct2d = { workspace = true, optional = true }
flor-graphics-opengl = { workspace = true, optional = true }
flor-graphics-tiny-skia = { workspace = true, optional = true }
taffy = { workspace = true }
parking_lot = "0.12"
slotmap = { workspace = true }
dashmap = { workspace = true }

[target.'cfg(windows)'.dependencies]
flor-platform = { version = "0.1.0", path = "../platform/windows", package = "flor-platform-windows" }
