[package]
name = "flor-graphics-opengl"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
TODO
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

[features]
svg = ["flor-base/svg", "dep:usvg", "dep:resvg"]
memory-font = ["flor-base/memory-font"]

[dependencies]
arc-swap = { workspace = true }
cosmic-text = "0.18"
glow = "0.16.0"
usvg = { version = "0.47.0", optional = true }
resvg = { version = "0.47.0", optional = true }
lyon_tessellation = "1.0.16"
log = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
slotmap = { workspace = true }
once_cell = { workspace = true }
flor-base = { workspace = true, features = ["graphics"] }
windows = { workspace = true, features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
etagere = "0.2.15"
