[package]
name = "flor-graphics-opengl"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
TODO
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

[features]
svg = ["flor-base/svg", "dep:usvg", "dep:resvg"]
memory-font = ["flor-base/memory-font"]

[dependencies]
cosmic-text = { workspace = true }
glow = "0.17.0"
usvg = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }
lyon_tessellation = "1.0.16"
log = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
flor-base = { workspace = true, features = ["graphics", "text-layout"] }
windows = { workspace = true, features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
