[package]
name = "flor-graphics-tiny-skia"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[features]
svg = ["flor-base/svg", "dep:usvg", "dep:resvg"]
memory-font = ["flor-base/memory-font"]

[dependencies]
usvg = { version = "0.47.0", optional = true }
resvg = { version = "0.47.0", optional = true }
cosmic-text = "0.18"
tiny-skia = "0.12.0"
log = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
image = { workspace = true, default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
flor-base = { workspace = true, features = ["graphics", "text-layout"] }
windows = { workspace = true, features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
slotmap = { workspace = true }
libblur = "0.23.1"

[lints]
workspace = true