[package]
name = "flor-graphics-tiny-skia"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[features]
svg = ["flor-base/svg", "dep:usvg", "dep:resvg"]
memory-font = ["flor-base/memory-font"]

[dependencies]
usvg = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }
cosmic-text = { workspace = true }
tiny-skia = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
image = { workspace = true, default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
flor-base = { workspace = true, features = ["graphics", "text-layout"] }
windows = { workspace = true, features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
slotmap = { workspace = true }
libblur = { workspace = true }

[lints]
workspace = true