[package]
name = "flor-platform-base"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
TODO
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }