[package]
name = "flor-platform-windows"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
TODO
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

[features]
theme-change = ["windows/Win32_System_Registry", "flor-platform-base/theme-change"]
monitor = ["windows/Win32_UI_HiDpi", "flor-platform-base/monitor"]

[dependencies]
once_cell = { workspace = true }
log = { workspace = true }
flor-platform-base = { workspace = true }
windows-core = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemServices", "Win32_System_Com", "Win32_System_Ole", "System_Implementation", "Win32_System_Com_StructuredStorage"
] }
parking_lot = "0.12"