[package]
name = "flor-platform-windows"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = """
TODO
"""
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
license.workspace = true
categories.workspace = true

[features]
theme-change = ["windows/Win32_System_Registry", "flor-base/theme-change"]
monitor = ["flor-base/monitor"]
drag-drop = ["rustc-hash", "windows/Win32_System_DataExchange", "windows/Win32_System_Memory", "windows/Win32_UI", "windows/Win32_UI_Shell", "flor-base/drag-drop"]
tray = ["flor-base/tray", "slotmap", "windows/Win32_UI_Shell", "windows/Win32_UI_WindowsAndMessaging"]
hi-dpi = []
win7-compat = ["windows/Win32_System_LibraryLoader"]
clipboard = ["windows/Win32_System_DataExchange", "windows/Win32_System_Memory", "flor-base/clipboard"]
cross-thread-window-creation = []
[dependencies]
once_cell = { workspace = true }
rustc-hash = { workspace = true, optional = true }
log = { workspace = true }
flor-base = { workspace = true, features = ["platform"] }
windows-core = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input_Ime", "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemServices", "Win32_System_Com", "Win32_System_Ole", "System_Implementation", "Win32_System_Com_StructuredStorage"
    , "Win32_System_Threading"
] }
thiserror = { workspace = true }
parking_lot = "0.12"
#windows-sys = { version = "0.61.2", features = ["Win32_System", "Win32_System_SystemServices"] }
slotmap = { workspace = true, optional = true }